# DeepI2P

./: .gitignore  LICENSE  README.md
data/: augmentation.py  kitti_helper.py  kitti_pc_img_pose_loader.py  kitti_png_to_npy.py  nuscenes_pc_img_pose_loader.py  oxford_pc_img_pose_loader.py
data/kitti/: copy_accumulated_frames.py  frame_accumulation.py  kitti_pc_bin_to_npy_in_img_frame.py  kitti_pc_bin_to_npy_with_downsample_sn.py
data/nuscenes/: get_night_scenes_for_test.py  make_datasets.py  playground.ipynb
data/oxford/: build_dataset.py  copy_lms_front_foreground.py  copy_lms_raw_to_ssd.py  copy_tags.py  copy_vo.py  train_val_split.txt.py  unzip_files.py
data/preparation/: kitti.ipynb  oxford-test.ipynb  oxford.ipynb  (+4 more)
evaluation/: gauss_newton_visualization.py  registration_lsq.py  registration_pnp.py  registration_random.py  registration_result_analysis.py  small_test.py  test_frustum_solver.py  visualization_for_paper.py  visualize_and_save_data.py
evaluation/frustum_reg/: CMakeLists.txt  setup.py
evaluation/frustum_reg/FrustumRegistration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
evaluation/frustum_reg/src/: main.cpp  registration.cpp  registration_2d.hpp  registration_3d.hpp  utils.hpp
kitti/: options.py  train_classifier.py
models/: focal_loss.py  layers_common.py  layers_pc.py  losses.py  multimodal_classifier.py  networks_img.py  networks_pc.py  networks_united.py  operations.py  resnet.py
nuscenes_t/: options.py  train_classifier.py
oxford/: options.py  train_classifier.py
util/: pytorch_helper.py  som.py  vis_tools.py
(+13 files in other folders)
